<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <EditText
        android:id="@+id/user_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:hint="@string/username"
        android:textColor="@color/grey" />

    <EditText
        android:id="@+id/pass_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/grey" />

    <Button
        android:id="@+id/dugme_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login1" />

</LinearLayout>